Add vanilla GAN jupyter notebook

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .idea
 __pycache__
 
+.ipynb_checkpoints
+
 runs
 
 models/binaries
@@ -10,3 +12,4 @@ data/interpolated_imagery
 data/generated_imagery
 data/debug_imagery
 data/MNIST
+data/CelebA
